2006-07-03  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: support implicit namespace specification in struct,
	  interface, enum, and flags declaration
	* vala/valasymbolbuilder.vala: report error when declaring non-static
	  namespace methods
	* vala/valasemanticanalyzer.vala: analyze return statements
	* vala/valacodegenerator.vala: correctly set GParamFlags for properties,
	  initialize static variables, add preconditions to property accessors,
	  support namespace methods
	* vala/valaassignment.vala, vala/valaattribute.vala: add interface
	  documentation, use implicit namespace specification
	* tests/test-001.vala, tests/test-002.vala, tests/test-003.vala,
	  tests/test-004.vala, tests/test-005.vala, tests/test-006.vala,
	  tests/test-007.vala, tests/test-008.vala, tests/test-009.vala:
	  update test cases to print test values

2006-06-30  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala, vala/valadatatype.vala,
	  vala/valaexpression.vala: use implicit namespace specification,
	  reformat code

2006-06-30  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: support implicit namespace specification in class
	  declaration

2006-06-29  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala, vala/valaclass.vala,
	  vala/valadatatype.vala, vala/valastruct.vala: distinguish between
	  ref_function/unref_function and dup_function/free_function
	* vala/valadatatype.vala: add interface documentation
	* vapi/glib-2.0.vala: use dup_function attribute, keep ref_function for
	  compatibility

2006-06-29  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala, vala/valaexpression.vala: add interface
	  documentation

2006-06-28  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolbuilder.vala: add private add_symbol helper method
	* vala/valasymbolresolver.vala: tiny refactoring of GObject lookup
	* vala/valasemanticanalyzer.vala: use get_parameters method of Callback
	* vala/valacallback.vala, vala/valaintegerliteral.vala,