@@ -1,3 +1,12 @@
+2006-07-04  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valacodegenerator.vala: generate assignment with appropriate
+	  operator
+	* vala/valaassignment.vala: use implicit namespace specification
+	* ccode/valaccodeassignment.vala: support assignment operators , add
+	  interface documentation, use implicit namespace specification
+	* tests/test-010.vala: test assignments
+
 2006-07-03  Jürg Billeter  <j@bitron.ch>
 
 	* vala/parser.y: support implicit namespace specification in struct,
